best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-success-first.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-latest
spec:
  containers:
  - name: nginx
    image: nginx:1.35
  - name: busybox
    image: busybox:latest
  initContainers:
  - name: nginx
    image: nginx:1.35
  - name: busybox
    image: busybox:latest
