best-practices/disallow-latest-tag/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-ht
spec:
  containers:
  - name: busybox
    image: busybox:v1.35
  initContainers:
  - name: busyboxinit
    image: busybox:v1.35
